# Friday-core

./: .gitignore  README.md  package.json  start-veronica.sh  vite.config.js
backend/: .env.example  agent_friday.py  bridge.py  pyproject.toml  server.py
backend/friday/: config.py
backend/friday/prompts/: __init__.py  templates.py
backend/friday/resources/: __init__.py  data.py
backend/friday/tools/: __init__.py  system.py  utils.py  web.py
src/: actions.js  index.html  interactions.js  main.js  renderer.js  state-machine.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/veronica/: phase-registry.js  veronica-api.js
src/veronica/phases/: friday-phase.js
