[project]
name = "veronica-backend"
version = "1.0.0"
description = "Veronica backend — Project Friday MCP server + voice pipeline + HTTP bridge"
requires-python = ">=3.11"

dependencies = [
    # MCP server
    "fastmcp>=2.0",
    # HTTP client for news/web tools
    "httpx>=0.27",
    # HTTP bridge (Rust ↔ Python tool calls)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Voice pipeline
    "livekit-agents[deepgram,google,openai,sarvam,silero]>=0.12",
    # Config
    "python-dotenv>=1.0",
]

[project.scripts]
friday       = "server:main"
friday_voice = "agent_friday:dev"
bridge       = "bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["friday"]
